fix: Spring 버전 낮추기